[BlackBerry] Run tests in '/http/tests/local' with local URI https://bugs.webkit.org/show_bug.cgi?id=84820

Patch by Xiaobo Wang <xbwang@torchmobile.com.cn> on 2012-04-25
Reviewed by Nikolas Zimmermann.

Currently we run all tests under folder "/http/tests/" as HTTP
tests (http://...). However in WebKit ORWT and NRWT scripts, tests in
'http/tests/local' are run with local path (like '/developer/LayoutTests
/http/tests/local/absolute-url-strip-whitespace.html').
With this patch we can keep the same behaviour as other portings.

* DumpRenderTree/blackberry/DumpRenderTree.cpp:
(BlackBerry::WebKit::DumpRenderTree::isHTTPTest):

Canonical link: https://commits.webkit.org/102336@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115182 268f45cc-cd09-0410-ab3c-d52691b4dbfc